# aishav5

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
aisha/: __main__.py
aisha/channels/: slack.py  telegram.py  whatsapp.py  whatsapp_listener.py
aisha/core/: chat.py  config.py  doctor.py  gateway.py  identity.py  memory.py  narrator.py  observer.py  profiling.py  rag.py  store.py
aisha/forge/: docx_tool.py  filetool.py  pdf_tool.py  pptx_tool.py  registry.py  shell_tool.py
data/migrations/: 001_initial.sql  002_temporal_triples.sql  003_tool_fingerprint.sql
md/: HUMANS.md  PERSONALITY.md  PRINCIPLES.md  VALUES.md
tests/: test_smoke.py
